--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -17,7 +17,7 @@
     <!-- About screen twitter label -->
     <string name="About.twitter">Twitter</string>
     <!-- About screen wallet ID label -->
-    <string name="About.walletID">BRDリワードID</string>
+    <string name="About.walletID">Website</string>
     <!-- Close modal button accessibility label -->
     <string name="AccessibilityLabels.close">閉じる</string>
     <!-- Support center accessibiliy label -->
@@ -31,13 +31,13 @@
     <!-- Loading Wallet Message -->
     <string name="Account.loadingMessage">ウォレット読み込み中</string>
     <!-- Default wallet name -->
-    <string name="AccountHeader.defaultWalletName">マイブレッド</string>
+    <string name="AccountHeader.defaultWalletName">Electra</string>
     <!-- Third party keyboard warning -->
     <string name="Alert.customKeyboard.android">現在、サードパーティーのキーボードを使用しているようです。これを使うと入力した内容が記録され、ペーパー・キーが盗まれる可能性があります。追加の保護措置としてAndroidのデフォルトキーボードに切り替えてください。</string>
     <!-- Error alert title -->
     <string name="Alert.error">エラー</string>
     <!-- Keystore error -->
-    <string name="Alert.keystore.generic.android">Android OSのKeystoreに問題があります。support@breadwallet.com にお問い合わせください。</string>
+    <string name="Alert.keystore.generic.android">Android OSのKeystoreに問題があります。support@electraproject.org にお問い合わせください。</string>
     <!-- KeyStore error, keys are invalidated -->
     <string name="Alert.keystore.invalidated.android">お使いのAndroidロック画面が無効にされたため、暗号化されたブレッドのデータはつい最近無効になりました。</string>
     <!-- Keystore error title -->
@@ -69,11 +69,11 @@
     <!-- Fingerprint was recognized by the scanner -->
     <string name="Alerts.touchIdSucceeded.android">指紋が認識されました</string>
     <!-- Tell the user where they can enable permissions to access device storage. -->
-    <string name="Android.allowFileSystemAccess">お使いのデバイスの設定でストレージの使用を許可して下さい: 「設定」&gt;「アプリ」&gt;「BRD」&gt;「許可」。</string>
+    <string name="Android.allowFileSystemAccess">お使いのデバイスの設定でストレージの使用を許可して下さい: 「設定」&gt;「アプリ」&gt;「Electra」&gt;「許可」。</string>
     <!-- The "home" screen is the name of the top level menu for the app. -->
     <string name="Android.BCH.welcome.message">お使いのウォレットのBCHには、ホーム画面からアクセスすることができます。</string>
     <!-- Warning about using apps that can alter the screen -->
-    <string name="Android.screenAlteringMessage">画面変更アプリ(例: Twilight) が無効になっていなければ、BRDは正常に動作しません。</string>
+    <string name="Android.screenAlteringMessage">画面変更アプリ(例: Twilight) が無効になっていなければ、Electraは正常に動作しません。</string>
     <!-- An app that alters the screen ("screen-altering app") has been detected. -->
     <string name="Android.screenAlteringTitle">画面変更アプリが検出されました</string>
     <!-- JSON Serialization error message -->
@@ -197,7 +197,7 @@
     <!-- Email unavailable alert title -->
     <string name="ErrorMessages.emailUnavailableTitle">メールが利用できません</string>
     <!-- Message that gets shown when we've detected the user has encountered the looping lock-screen bug. (preserve [ ] characters) -->
-    <string name="ErrorMessages.loopingLockScreen.android">BRDは、お使いのAndroidのバージョンに不具合があるため認証できません。 [詳しい情報はこちらをタップしてご覧ください。]</string>
+    <string name="ErrorMessages.loopingLockScreen.android">Electraは、お使いのAndroidのバージョンに不具合があるため認証できません。 [詳しい情報はこちらをタップしてご覧ください。]</string>
     <!-- Messaging unavailable alert title -->
     <string name="ErrorMessages.messagingUnavailableMessage">この端末からメッセージを送信するための設定がされていません。</string>
     <!-- Messaging unavailable alert title -->
@@ -210,7 +210,7 @@
     <string name="FaceIDSettings.label">自分の顔を使って、ブレッドのロックを解除して、設定された使用限度額までお金を送金しましょう。</string>
     <!-- Title of the screen for setting the Face ID Spending Limit -->
     <string name="FaceIDSettings.linkText">Face ID使用限度額画面</string>
-    <!-- Setting to turn on Face ID for BRD -->
+    <!-- Setting to turn on Face ID for Electra -->
     <string name="FaceIDSettings.switchLabel">ブレッド利用時にFace IDを有効にする</string>
     <!-- Face ID settings view title -->
     <string name="FaceIDSettings.title">Face ID</string>
@@ -269,7 +269,7 @@
     <!-- Caption for graphics -->
     <string name="Import.leftCaption">秘密鍵</string>
     <!-- Import wallet intro screen message -->
-    <string name="Import.message">秘密鍵は通常QRコードとして紙に印刷され、オフラインでの資金保管に使用されています。秘密鍵からの引き出しをすると秘密鍵が管理する資金全額を1回の取引でお使いのBRDに送金します。</string>
+    <string name="Import.message">秘密鍵は通常QRコードとして紙に印刷され、オフラインでの資金保管に使用されています。秘密鍵からの引き出しをすると秘密鍵が管理する資金全額を1回の取引でお使いのElectraに送金します。</string>
     <!-- Enter password alert view title -->
     <string name="Import.password">この秘密鍵はパスワードで保護されています。</string>
     <!-- password textfield placeholder -->
@@ -385,13 +385,13 @@
     <!-- Onboarding screen Page 1 title -->
     <string name="OnboardingPageOne.title">新しいグローバルウォレットにようこそ！</string>
     <!-- Onboarding screen Page 3 subtitle -->
-    <string name="OnboardingPageThree.subtitle">BRDで容易に安全に投資して多様化しましょう。</string>
+    <string name="OnboardingPageThree.subtitle">Electraで容易に安全に投資して多様化しましょう。</string>
     <!-- Onboarding screen Page 3 title -->
     <string name="OnboardingPageThree.title">ビットコイン,トークン,その他のデジタル通貨を購入・取引しましょう。</string>
     <!-- Onboarding screen Page 2 subtitle -->
     <string name="OnboardingPageTwo.subtitle">当社の保護下には,60億USドル超相当の資産があります。</string>
     <!-- Onboarding screen Page 2 title -->
-    <string name="OnboardingPageTwo.title">世界中にいるBRDを信頼する150万人の仲間になりましょう。</string>
+    <string name="OnboardingPageTwo.title">世界中にいるElectraを信頼する150万人の仲間になりましょう。</string>
     <!-- Eg. Send 1.0Eth to purchase CCC -->
     <string name="PaymentConfirmation.amountText">%2$sを購入するために%1$sを送金する</string>
     <!-- Payment confirmation view title -->
@@ -447,7 +447,7 @@
     <!-- Transaction rejected prompt title -->
     <string name="Prompts.RecommendRescan.title">トランザクションが拒否されました</string>
     <!-- Share data prompt body -->
-    <string name="Prompts.ShareData.body">匿名のデータを共有してBRDの機能向上に役立てる</string>
+    <string name="Prompts.ShareData.body">匿名のデータを共有してElectraの機能向上に役立てる</string>
     <!-- Share data prompt title -->
     <string name="Prompts.ShareData.title">匿名のデータを共有する</string>
     <!-- Enable touch ID prompt body -->
@@ -465,7 +465,7 @@
     <!-- Upgrade PIN prompt title. -->
     <string name="Prompts.UpgradePin.title">PINコードを更新する</string>
     <!-- Notifications will be added later but users can set their preferences now, which is why we specify "in the future". -->
-    <string name="PushNotifications.body">今後、BRDからの特別なメッセージを受け取るために通知をオンにしてください。</string>
+    <string name="PushNotifications.body">今後、Electraからの特別なメッセージを受け取るために通知をオンにしてください。</string>
     <!-- Push notifications are disabled alert title" -->
     <string name="PushNotifications.disabled">通知が無効になっています</string>
     <!-- Push notifications settings instructions -->
@@ -527,7 +527,7 @@
     <!-- extimated time -->
     <string name="ReScan.body1">20〜45分</string>
     <!-- Syncing explanation -->
-    <string name="ReScan.body2">ビットコインネットワークでトランザクションが完了したと表示されているが、BRD上では完了と表示されない場合。</string>
+    <string name="ReScan.body2">ビットコインネットワークでトランザクションが完了したと表示されているが、Electra上では完了と表示されない場合。</string>
     <!-- Syncing explanation -->
     <string name="ReScan.body3">送金しているが、拒否され続けている場合。</string>
     <!-- Start Sync button label -->
@@ -563,7 +563,7 @@
     <!-- PIN button title -->
     <string name="SecurityCenter.pinTitle">6桁のPINコード</string>
     <!-- Touch ID button description -->
-    <string name="SecurityCenter.touchIdDescription">BRDロック解除の他、設定した限度額までの送金も指紋認証で出来ます。</string>
+    <string name="SecurityCenter.touchIdDescription">Electraロック解除の他、設定した限度額までの送金も指紋認証で出来ます。</string>
     <!-- Touch ID button title -->
     <string name="SecurityCenter.touchIdTitle">Touch ID</string>
     <!-- Security center fingerprint authentication button -->
@@ -824,7 +824,7 @@
     <string name="Transaction.sentTo">%1$sに送金済み</string>
     <!-- eg. Starting balance: $50.00 -->
     <string name="Transaction.starting">期首残高: %1$s</string>
-    <!-- e.g. "[The money you paid was a] Fee for token transfer: BRD" (BRD is the token that was transfered) -->
+    <!-- e.g. "[The money you paid was a] Fee for token transfer: Electra" (Electra is the token that was transfered) -->
     <string name="Transaction.tokenTransfer">トークン送金の手数料: %1$s</string>
     <!-- Waiting to be confirmed string -->
     <string name="Transaction.waiting">承認を待っています。トランザクションの完了には承認が必要となる場合があります。推定時間: 1-2時間。</string>
@@ -977,7 +977,7 @@
     <!-- Authorize transaction with touch id message -->
     <string name="VerifyPin.touchIdMessage">このトランザクションを認証する</string>
     <!-- 'No wallet' warning for watch app -->
-    <string name="Watch.noWalletWarning">BRDのiPhoneアプリを開き、ウォレットをセットアップする</string>
+    <string name="Watch.noWalletWarning">ElectraのiPhoneアプリを開き、ウォレットをセットアップする</string>
     <!-- Dismiss button label -->
     <string name="Webview.dismiss">解除</string>
     <!-- Webview loading error message -->
@@ -985,9 +985,9 @@
     <!-- Updating webview message -->
     <string name="Webview.updating">更新中...</string>
     <!-- Welcome screen text. (?) will be replaced with the help icon users should look for. -->
-    <string name="Welcome.body">Breadwalletは新しい機能や見た目を備えて、BRDという名前に生まれ変わりました。\n\nヘルプをご覧になるには、画面右上にある(?)からお探しください。</string>
+    <string name="Welcome.body">Breadwalletは新しい機能や見た目を備えて、Electraという名前に生まれ変わりました。\n\nヘルプをご覧になるには、画面右上にある(?)からお探しください。</string>
     <!-- Top title of welcome screen -->
-    <string name="Welcome.title">BRDへようこそ！</string>
+    <string name="Welcome.title">Electraへようこそ！</string>
     <!-- Wipe wallet alert message -->
     <string name="WipeWallet.alertMessage">本当にこのウォレットを削除しますか？</string>
     <!-- Wipe wallet alert title -->
@@ -1001,7 +1001,7 @@
     <!-- Instructions for unlinking the wallet -->
     <string name="WipeWallet.startMessage">ご利用ウォレットのリンクを解除してこの機器から解除してください。このウォレットのリンクが解除されると、この機器で新しいウォレットを起動したり、別のウォレット再び利用できるようになります。</string>
     <!-- Start wipe wallet view warning -->
-    <string name="WipeWallet.startWarning">この端末から現在使用中のBRDウォレットへのアクセスはできなくなります。復元する際は復元フレーズが必要になります。</string>
+    <string name="WipeWallet.startWarning">この端末から現在使用中のElectraウォレットへのアクセスはできなくなります。復元する際は復元フレーズが必要になります。</string>
     <!-- Unlink this wallet from this device. -->
     <string name="WipeWallet.title">ウォレットのリンクを解除</string>
     <!-- Wipe wallet button title -->
