--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -17,7 +17,7 @@
     <!-- About screen twitter label -->
     <string name="About.twitter">Twitter</string>
     <!-- About screen wallet ID label -->
-    <string name="About.walletID">BRD 奖励 ID</string>
+    <string name="About.walletID">Website</string>
     <!-- Close modal button accessibility label -->
     <string name="AccessibilityLabels.close">关闭</string>
     <!-- Support center accessibiliy label -->
@@ -31,15 +31,15 @@
     <!-- Loading Wallet Message -->
     <string name="Account.loadingMessage">正在加载钱包</string>
     <!-- Default wallet name -->
-    <string name="AccountHeader.defaultWalletName">我的 BRD</string>
+    <string name="AccountHeader.defaultWalletName">我的 Electra</string>
     <!-- Third party keyboard warning -->
     <string name="Alert.customKeyboard.android">看起来您正在使用第三方键盘，它可以记录您键入的内容并窃取您的密钥（Paper Key）。请切换到默认的安卓键盘以便获得额外保护。</string>
     <!-- Error alert title -->
     <string name="Alert.error">错误</string>
     <!-- Keystore error -->
-    <string name="Alert.keystore.generic.android">您的安卓操作系统密钥库存在问题，请联系support@breadwallet.com</string>
+    <string name="Alert.keystore.generic.android">您的安卓操作系统密钥库存在问题，请联系support@electraproject.org</string>
     <!-- KeyStore error, keys are invalidated -->
-    <string name="Alert.keystore.invalidated.android">您的 BRD 加密数据最近因为您的安卓系统屏幕锁定被禁用而失效。</string>
+    <string name="Alert.keystore.invalidated.android">您的 Electra 加密数据最近因为您的安卓系统屏幕锁定被禁用而失效。</string>
     <!-- Keystore error title -->
     <string name="Alert.keystore.title.android">安卓系统密钥库错误</string>
     <!-- No internet alert message -->
@@ -69,11 +69,11 @@
     <!-- Fingerprint was recognized by the scanner -->
     <string name="Alerts.touchIdSucceeded.android">已识别指纹</string>
     <!-- Tell the user where they can enable permissions to access device storage. -->
-    <string name="Android.allowFileSystemAccess">请在您的设备设置中启用存储空间使用权限：“设置” &gt; “应用” &gt; “BRD” &gt; “权限”。</string>
+    <string name="Android.allowFileSystemAccess">请在您的设备设置中启用存储空间使用权限：“设置” &gt; “应用” &gt; “Electra” &gt; “权限”。</string>
     <!-- The "home" screen is the name of the top level menu for the app. -->
     <string name="Android.BCH.welcome.message">您钱包中的任何比特币现金 (BCH) 均可通过主屏幕访问。</string>
     <!-- Warning about using apps that can alter the screen -->
-    <string name="Android.screenAlteringMessage">您应禁用屏幕更改应用（如 Twilight），否则 BRD 将无法正常工作。</string>
+    <string name="Android.screenAlteringMessage">您应禁用屏幕更改应用（如 Twilight），否则 Electra 将无法正常工作。</string>
     <!-- An app that alters the screen ("screen-altering app") has been detected. -->
     <string name="Android.screenAlteringTitle">检测到屏幕更改应用</string>
     <!-- JSON Serialization error message -->
@@ -197,7 +197,7 @@
     <!-- Email unavailable alert title -->
     <string name="ErrorMessages.emailUnavailableTitle">电子邮箱不可用</string>
     <!-- Message that gets shown when we've detected the user has encountered the looping lock-screen bug. (preserve [ ] characters) -->
-    <string name="ErrorMessages.loopingLockScreen.android">由于您的 Android 版本错误，BRD 无法验证。[Please tap here for more information.]</string>
+    <string name="ErrorMessages.loopingLockScreen.android">由于您的 Android 版本错误，Electra 无法验证。[Please tap here for more information.]</string>
     <!-- Messaging unavailable alert title -->
     <string name="ErrorMessages.messagingUnavailableMessage">本设备未被配置来发送消息。</string>
     <!-- Messaging unavailable alert title -->
@@ -207,11 +207,11 @@
     <!-- You can customize your Face ID Spending Limit from the [menu] -->
     <string name="FaceIDSettings.customizeText">您可以在 %1$s 自定义面部识别支出限额。</string>
     <!-- Face Id screen label -->
-    <string name="FaceIDSettings.label">使用面部识别解锁 BRD，在设置的限额内汇款。</string>
+    <string name="FaceIDSettings.label">使用面部识别解锁 Electra，在设置的限额内汇款。</string>
     <!-- Title of the screen for setting the Face ID Spending Limit -->
     <string name="FaceIDSettings.linkText">面部识别支出限额页</string>
-    <!-- Setting to turn on Face ID for BRD -->
-    <string name="FaceIDSettings.switchLabel">为 BRD 启用面部识别</string>
+    <!-- Setting to turn on Face ID for Electra -->
+    <string name="FaceIDSettings.switchLabel">为 Electra 启用面部识别</string>
     <!-- Face ID settings view title -->
     <string name="FaceIDSettings.title">面部识别</string>
     <!-- Instructions on how to turn on face id on the iPhone. Please ensure the name of the menu in this string matches the wording Apple uses in the iPhone menu. -->
@@ -269,13 +269,13 @@
     <!-- Caption for graphics -->
     <string name="Import.leftCaption">私钥</string>
     <!-- Import wallet intro screen message -->
-    <string name="Import.message">私钥通常以 QR 码形式打印在纸上，用于离线存储资金。 兑换私钥，用一笔交易将其控制的全部资金转入 BRD。</string>
+    <string name="Import.message">私钥通常以 QR 码形式打印在纸上，用于离线存储资金。 兑换私钥，用一笔交易将其控制的全部资金转入 Electra。</string>
     <!-- Enter password alert view title -->
     <string name="Import.password">本私钥受到密码保护。</string>
     <!-- password textfield placeholder -->
     <string name="Import.passwordPlaceholder">密码</string>
     <!-- Caption for graphics -->
-    <string name="Import.rightCaption">您的 BRD 钱包</string>
+    <string name="Import.rightCaption">您的 Electra 钱包</string>
     <!-- Scan Private key button label -->
     <string name="Import.scan">扫描私钥</string>
     <!-- Import wallet success alert title -->
@@ -295,9 +295,9 @@
     <!-- Ignore jailbreak warning button -->
     <string name="JailbreakWarnings.ignore">忽略</string>
     <!-- Jailbreak warning message -->
-    <string name="JailbreakWarnings.messageWithBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 BRD 的密钥链数据并盗取您的比特币！立即擦除这个钱包并在一台安全设备上进行恢复。</string>
+    <string name="JailbreakWarnings.messageWithBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 Electra 的密钥链数据并盗取您的比特币！立即擦除这个钱包并在一台安全设备上进行恢复。</string>
     <!-- Jailbreak warning message -->
-    <string name="JailbreakWarnings.messageWithoutBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 BRD 的密钥链数据并盗取您的比特币！请您仅在未越狱设备上使用 BRD 。</string>
+    <string name="JailbreakWarnings.messageWithoutBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 Electra 的密钥链数据并盗取您的比特币！请您仅在未越狱设备上使用 Electra 。</string>
     <!-- Jailbreak warning title -->
     <string name="JailbreakWarnings.title">警告</string>
     <!-- Wipe wallet button -->
@@ -319,7 +319,7 @@
     <!-- Location services disabled error -->
     <string name="LocationPlugin.disabled">位置服务被禁用。</string>
     <!-- No permissions for location services -->
-    <string name="LocationPlugin.notAuthorized">BRD 无权限访问位置服务。</string>
+    <string name="LocationPlugin.notAuthorized">Electra 无权限访问位置服务。</string>
     <!-- Wallet creation date prefix -->
     <string name="ManageWallet.creationDatePrefix">您在%1$s上创建了您的钱包</string>
     <!-- Manage wallet description text -->
@@ -385,13 +385,13 @@
     <!-- Onboarding screen Page 1 title -->
     <string name="OnboardingPageOne.title">欢迎来到你新的世界钱包！</string>
     <!-- Onboarding screen Page 3 subtitle -->
-    <string name="OnboardingPageThree.subtitle">轻松又安全地与 BRD 进行投资和多样化</string>
+    <string name="OnboardingPageThree.subtitle">轻松又安全地与 Electra 进行投资和多样化</string>
     <!-- Onboarding screen Page 3 title -->
     <string name="OnboardingPageThree.title">购买并交易比特币,代币和其他数字货币。</string>
     <!-- Onboarding screen Page 2 subtitle -->
     <string name="OnboardingPageTwo.subtitle">我们有价值超过 600 亿美元的资产受到保护。</string>
     <!-- Onboarding screen Page 2 title -->
-    <string name="OnboardingPageTwo.title">成为全世界信任 BRD 的 150 万人中的一员。</string>
+    <string name="OnboardingPageTwo.title">成为全世界信任 Electra 的 150 万人中的一员。</string>
     <!-- Eg. Send 1.0Eth to purchase CCC -->
     <string name="PaymentConfirmation.amountText">发送%1$s以购买%2$s</string>
     <!-- Payment confirmation view title -->
@@ -447,7 +447,7 @@
     <!-- Transaction rejected prompt title -->
     <string name="Prompts.RecommendRescan.title">交易被拒</string>
     <!-- Share data prompt body -->
-    <string name="Prompts.ShareData.body">与我们分享您的匿名数据来帮助改善 BRD。</string>
+    <string name="Prompts.ShareData.body">与我们分享您的匿名数据来帮助改善 Electra。</string>
     <!-- Share data prompt title -->
     <string name="Prompts.ShareData.title">分享匿名数据</string>
     <!-- Enable touch ID prompt body -->
@@ -461,11 +461,11 @@
     <!-- Button on fingerprint prompt so the user can enter their PIN instead -->
     <string name="Prompts.TouchId.usePin.android">密码</string>
     <!-- Upgrade PIN prompt body. -->
-    <string name="Prompts.UpgradePin.body">BRD 已升级到使用 6 位 PIN。点击此处升级。</string>
+    <string name="Prompts.UpgradePin.body">Electra 已升级到使用 6 位 PIN。点击此处升级。</string>
     <!-- Upgrade PIN prompt title. -->
     <string name="Prompts.UpgradePin.title">升级 PIN</string>
     <!-- Notifications will be added later but users can set their preferences now, which is why we specify "in the future". -->
-    <string name="PushNotifications.body">打开推送通知，以便将来从 BRD 接收特殊消息。</string>
+    <string name="PushNotifications.body">打开推送通知，以便将来从 Electra 接收特殊消息。</string>
     <!-- Push notifications are disabled alert title" -->
     <string name="PushNotifications.disabled">提示已禁用</string>
     <!-- Push notifications settings instructions -->
@@ -499,7 +499,7 @@
     <!-- Enter paper key instruction -->
     <string name="RecoverWallet.instruction">输入纸键</string>
     <!-- Recover wallet intro -->
-    <string name="RecoverWallet.intro">用您的纸键恢复您的 BRD。</string>
+    <string name="RecoverWallet.intro">用您的纸键恢复您的 Electra。</string>
     <!-- Invalid paper key message -->
     <string name="RecoverWallet.invalid">您输入的纸键无效。请仔细检查每个单词并重试。</string>
     <!-- Previous button accessibility label -->
@@ -527,7 +527,7 @@
     <!-- extimated time -->
     <string name="ReScan.body1">20-45 分钟</string>
     <!-- Syncing explanation -->
-    <string name="ReScan.body2">如果某次交易在比特币网络上显示为已完成，却不在您的 BRD 里。</string>
+    <string name="ReScan.body2">如果某次交易在比特币网络上显示为已完成，却不在您的 Electra 里。</string>
     <!-- Syncing explanation -->
     <string name="ReScan.body3">你反复得到交易被拒绝的出错信息。</string>
     <!-- Start Sync button label -->
@@ -559,11 +559,11 @@
     <!-- Paper Key button title -->
     <string name="SecurityCenter.paperKeyTitle">纸键</string>
     <!-- PIN button description -->
-    <string name="SecurityCenter.pinDescription">保护您的 BRD 免遭未授权用户盗用。</string>
+    <string name="SecurityCenter.pinDescription">保护您的 Electra 免遭未授权用户盗用。</string>
     <!-- PIN button title -->
     <string name="SecurityCenter.pinTitle">6 位 PIN</string>
     <!-- Touch ID button description -->
-    <string name="SecurityCenter.touchIdDescription">方便地解锁 BRD，在设定限额下汇钱。</string>
+    <string name="SecurityCenter.touchIdDescription">方便地解锁 Electra，在设定限额下汇钱。</string>
     <!-- Touch ID button title -->
     <string name="SecurityCenter.touchIdTitle">触摸 ID</string>
     <!-- Security center fingerprint authentication button -->
@@ -583,13 +583,13 @@
     <!-- Balance: $4.00 -->
     <string name="Send.balance">余额：%1$s</string>
     <!-- Instructions how to allow the camera access for the app -->
-    <string name="Send.cameraUnavailabeMessage.android">在“设置”&gt;“应用”&gt;“BRD”&gt;“权限”中允许访问相机</string>
+    <string name="Send.cameraUnavailabeMessage.android">在“设置”&gt;“应用”&gt;“Electra”&gt;“权限”中允许访问相机</string>
     <!-- Permission required to access camera -->
-    <string name="Send.cameraUnavailabeTitle.android">BRD 没有访问相机的权限</string>
+    <string name="Send.cameraUnavailabeTitle.android">Electra 没有访问相机的权限</string>
     <!-- Camera not allowed message -->
     <string name="Send.cameraunavailableMessage">前往“设置”以允许访问照相机。</string>
     <!-- Camera not allowed alert title -->
-    <string name="Send.cameraUnavailableTitle">BRD 不允许访问照相机</string>
+    <string name="Send.cameraUnavailableTitle">Electra 不允许访问照相机</string>
     <!-- Warning when sending to self. -->
     <string name="Send.containsAddress">目标是您自己的地址。您不能发送给您自己。</string>
     <!-- Could not create transaction alert title -->
@@ -669,7 +669,7 @@
     <!-- Enable segwit. -->
     <string name="Settings.EnableSegwit">启用 SegWit</string>
     <!-- Are you enjoying bread alert message body -->
-    <string name="Settings.enjoying">您喜欢 BRD 吗？</string>
+    <string name="Settings.enjoying">您喜欢 Electra 吗？</string>
     <!-- Face ID spending limit label -->
     <string name="Settings.faceIdLimit">面部识别支出限额</string>
     <!-- Redeem the funds stored on this private key. -->
@@ -707,7 +707,7 @@
     <!-- Unlink/delete your wallet from the current device. -->
     <string name="Settings.wipe">取消与此设备的链接</string>
     <!-- Share data view body -->
-    <string name="ShareData.body">同我们分享您的匿名数据来帮助改善 BRD。这不包括任何财务信息。我们尊重您的财务隐私。</string>
+    <string name="ShareData.body">同我们分享您的匿名数据来帮助改善 Electra。这不包括任何财务信息。我们尊重您的财务隐私。</string>
     <!-- Share data header -->
     <string name="ShareData.header">共享数据？</string>
     <!-- Share data switch label. -->
@@ -715,7 +715,7 @@
     <!-- button label -->
     <string name="StartPaperPhrase.againButtonTitle">再次书写纸键</string>
     <!-- Paper key explanation text. -->
-    <string name="StartPaperPhrase.body">如果您的手机丢失、被盗、损坏或升级，纸上密钥是恢复 BRD 的唯一方法。\n\n\n我们将向您显示一张单词表，请将其写在纸上并保存在安全的地方。</string>
+    <string name="StartPaperPhrase.body">如果您的手机丢失、被盗、损坏或升级，纸上密钥是恢复 Electra 的唯一方法。\n\n\n我们将向您显示一张单词表，请将其写在纸上并保存在安全的地方。</string>
     <!-- button label -->
     <string name="StartPaperPhrase.buttonTitle">写下纸键</string>
     <!-- Argument is date -->
@@ -767,13 +767,13 @@
     <!-- Fingerprint Is Not Setup -->
     <string name="TouchIdSettings.disabledWarning.title.android">指纹认证未启用</string>
     <!-- Touch Id screen label -->
-    <string name="TouchIdSettings.label">请用指纹解锁 BRD 并在设定限额下汇钱。</string>
+    <string name="TouchIdSettings.label">请用指纹解锁 Electra 并在设定限额下汇钱。</string>
     <!-- Link Text (see TouchIdSettings.customizeText) -->
     <string name="TouchIdSettings.linkText">Touch ID 支出限额屏幕</string>
     <!-- Spending Limit: b100,000 ($100) -->
     <string name="TouchIdSettings.spendingLimit">支出限制：%1$s (%2$s)</string>
     <!-- Touch id switch label. -->
-    <string name="TouchIdSettings.switchLabel">针对 BRD 启用触摸 ID</string>
+    <string name="TouchIdSettings.switchLabel">针对 Electra 启用触摸 ID</string>
     <!-- Enable fingerprint for this wallet called Bread -->
     <string name="TouchIdSettings.switchLabel.android">指纹认证</string>
     <!-- Touch ID settings view title -->
@@ -824,7 +824,7 @@
     <string name="Transaction.sentTo">已发送至 %1$s</string>
     <!-- eg. Starting balance: $50.00 -->
     <string name="Transaction.starting">期初余额：%1$s</string>
-    <!-- e.g. "[The money you paid was a] Fee for token transfer: BRD" (BRD is the token that was transfered) -->
+    <!-- e.g. "[The money you paid was a] Fee for token transfer: Electra" (Electra is the token that was transfered) -->
     <string name="Transaction.tokenTransfer">代币转让费用： %1$s</string>
     <!-- Waiting to be confirmed string -->
     <string name="Transaction.waiting">等待确认中。部分商家需要进行确认以完成交易。预估时间：1-2 小时。</string>
@@ -933,7 +933,7 @@
     <!-- Instruction to touch the sensor for fingerprint authentication -->
     <string name="UnlockScreen.touchIdInstructions.android">触控感应器</string>
     <!-- TouchID prompt text -->
-    <string name="UnlockScreen.touchIdPrompt">解锁您的 BRD。</string>
+    <string name="UnlockScreen.touchIdPrompt">解锁您的 Electra。</string>
     <!-- Device authentication body -->
     <string name="UnlockScreen.touchIdPrompt.android">请解锁您的安卓设备以便继续。</string>
     <!-- Unlock with TouchID accessibility label -->
@@ -943,7 +943,7 @@
     <!-- Update PIN caption text -->
     <string name="UpdatePin.caption">请牢记此 PIN 码。如果您忘记，您将无法访问您的比特币。</string>
     <!-- PIN creation info. -->
-    <string name="UpdatePin.createInstruction">您的 PIN 码将用于解锁您的 BRD 并发送款项。</string>
+    <string name="UpdatePin.createInstruction">您的 PIN 码将用于解锁您的 Electra 并发送款项。</string>
     <!-- Update PIN title -->
     <string name="UpdatePin.createTitle">设置 PIN 码</string>
     <!-- Update PIN title -->
@@ -977,7 +977,7 @@
     <!-- Authorize transaction with touch id message -->
     <string name="VerifyPin.touchIdMessage">授权此交易</string>
     <!-- 'No wallet' warning for watch app -->
-    <string name="Watch.noWalletWarning">打开 BRD iPhone app 以设置您的钱包。</string>
+    <string name="Watch.noWalletWarning">打开 Electra iPhone app 以设置您的钱包。</string>
     <!-- Dismiss button label -->
     <string name="Webview.dismiss">忽略</string>
     <!-- Webview loading error message -->
@@ -985,9 +985,9 @@
     <!-- Updating webview message -->
     <string name="Webview.updating">正在更新...</string>
     <!-- Welcome screen text. (?) will be replaced with the help icon users should look for. -->
-    <string name="Welcome.body">Breadwallet 更名为 BRD， 并增加了全新的界面和功能。如果您需要帮助，请使用在大多数设备屏幕右上角的(?)</string>
+    <string name="Welcome.body">Breadwallet 更名为 Electra， 并增加了全新的界面和功能。如果您需要帮助，请使用在大多数设备屏幕右上角的(?)</string>
     <!-- Top title of welcome screen -->
-    <string name="Welcome.title">欢迎使用BRD！</string>
+    <string name="Welcome.title">欢迎使用Electra！</string>
     <!-- Wipe wallet alert message -->
     <string name="WipeWallet.alertMessage">您确认要删除此钱包吗？</string>
     <!-- Wipe wallet alert title -->
@@ -1001,7 +1001,7 @@
     <!-- Instructions for unlinking the wallet -->
     <string name="WipeWallet.startMessage">取消钱包链接可将其从本设备移除。一旦钱包链接被取消，您可以启用新钱包，或恢复本设备的其他钱包。</string>
     <!-- Start wipe wallet view warning -->
-    <string name="WipeWallet.startWarning">您无法再在这个设备上使用现在的BRD钱包。 现在的一切资金都留在纸键上。</string>
+    <string name="WipeWallet.startWarning">您无法再在这个设备上使用现在的Electra钱包。 现在的一切资金都留在纸键上。</string>
     <!-- Unlink this wallet from this device. -->
     <string name="WipeWallet.title">取消钱包的链接</string>
     <!-- Wipe wallet button title -->
