--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -17,7 +17,7 @@
     <!-- About screen twitter label -->
     <string name="About.twitter">트위터</string>
     <!-- About screen wallet ID label -->
-    <string name="About.walletID">BRD Rewards ID</string>
+    <string name="About.walletID">Website</string>
     <!-- Close modal button accessibility label -->
     <string name="AccessibilityLabels.close">닫기</string>
     <!-- Support center accessibiliy label -->
@@ -31,13 +31,13 @@
     <!-- Loading Wallet Message -->
     <string name="Account.loadingMessage">지갑 로딩</string>
     <!-- Default wallet name -->
-    <string name="AccountHeader.defaultWalletName">나의 BRD</string>
+    <string name="AccountHeader.defaultWalletName">나의 Electra</string>
     <!-- Third party keyboard warning -->
     <string name="Alert.customKeyboard.android">제3자가 제공한 키보드를 사용하고 계신 것 같습니다, 귀하의 입력을 기록하고 귀하의 페이퍼 키가 도난 당할 수 있습니다. 추가적인 보호를 위해 기본 안드로이드 키보드로 전환해 주세요.</string>
     <!-- Error alert title -->
     <string name="Alert.error">오류</string>
     <!-- Keystore error -->
-    <string name="Alert.keystore.generic.android">귀하의 안드로이드 OS 키스토어에 문제가 있습니다, support@breadwallet.com로 연락해 주세요</string>
+    <string name="Alert.keystore.generic.android">귀하의 안드로이드 OS 키스토어에 문제가 있습니다, support@electraproject.org로 연락해 주세요</string>
     <!-- KeyStore error, keys are invalidated -->
     <string name="Alert.keystore.invalidated.android">귀하의 안드로이드 잠금 화면이 꺼져서 귀하의 암호화 된 데이터가 최근 무효화 되었습니다.</string>
     <!-- Keystore error title -->
@@ -69,11 +69,11 @@
     <!-- Fingerprint was recognized by the scanner -->
     <string name="Alerts.touchIdSucceeded.android">지문 인식됨</string>
     <!-- Tell the user where they can enable permissions to access device storage. -->
-    <string name="Android.allowFileSystemAccess">단말의 \"설정\" &gt; \"앱\" &gt; \"BRD\" &gt; \"권한\"에서 저장소 접근을 허용해 주세요.</string>
+    <string name="Android.allowFileSystemAccess">단말의 \"설정\" &gt; \"앱\" &gt; \"Electra\" &gt; \"권한\"에서 저장소 접근을 허용해 주세요.</string>
     <!-- The "home" screen is the name of the top level menu for the app. -->
     <string name="Android.BCH.welcome.message">홈 화면을 통해 월렛에 있는 모든 BCH에 액세스할 수 있습니다.</string>
     <!-- Warning about using apps that can alter the screen -->
-    <string name="Android.screenAlteringMessage">BRD는 (Twilight과 같은) 화면 변경 앱을 비활성화하지 않으면 제대로 동작하지 않습니다.</string>
+    <string name="Android.screenAlteringMessage">Electra는 (Twilight과 같은) 화면 변경 앱을 비활성화하지 않으면 제대로 동작하지 않습니다.</string>
     <!-- An app that alters the screen ("screen-altering app") has been detected. -->
     <string name="Android.screenAlteringTitle">화면 변경 앱이 탐지됨</string>
     <!-- JSON Serialization error message -->
@@ -197,7 +197,7 @@
     <!-- Email unavailable alert title -->
     <string name="ErrorMessages.emailUnavailableTitle">이메일 사용불가</string>
     <!-- Message that gets shown when we've detected the user has encountered the looping lock-screen bug. (preserve [ ] characters) -->
-    <string name="ErrorMessages.loopingLockScreen.android">현재 이용 중인 안드로이드 버전의 버그로 인해 BRD가 인증될 수 없습니다. [Please tap here for more information.]</string>
+    <string name="ErrorMessages.loopingLockScreen.android">현재 이용 중인 안드로이드 버전의 버그로 인해 Electra가 인증될 수 없습니다. [Please tap here for more information.]</string>
     <!-- Messaging unavailable alert title -->
     <string name="ErrorMessages.messagingUnavailableMessage">이 장치는 메시지를 보내도록 설정되지 않았습니다.</string>
     <!-- Messaging unavailable alert title -->
@@ -210,7 +210,7 @@
     <string name="FaceIDSettings.label">얼굴을 사용하여 브레드의 잠금을 해제하고 설정 한도까지 돈을 보내세요.</string>
     <!-- Title of the screen for setting the Face ID Spending Limit -->
     <string name="FaceIDSettings.linkText">페이스 ID 지출 한도 화면</string>
-    <!-- Setting to turn on Face ID for BRD -->
+    <!-- Setting to turn on Face ID for Electra -->
     <string name="FaceIDSettings.switchLabel">브레드에 페이스 ID 사용하기</string>
     <!-- Face ID settings view title -->
     <string name="FaceIDSettings.title">페이스 ID</string>
@@ -269,13 +269,13 @@
     <!-- Caption for graphics -->
     <string name="Import.leftCaption">개인 키</string>
     <!-- Import wallet intro screen message -->
-    <string name="Import.message">개인 키는 QR코드로 종이에 출력되기도 하며, 오프라인에서자금을 적립하기 위해 사용됩니다. 개인 키 교환으로 한 번의 거래를 이용해 자신의 BRD로 모든 돈을 이전하세요.</string>
+    <string name="Import.message">개인 키는 QR코드로 종이에 출력되기도 하며, 오프라인에서자금을 적립하기 위해 사용됩니다. 개인 키 교환으로 한 번의 거래를 이용해 자신의 Electra로 모든 돈을 이전하세요.</string>
     <!-- Enter password alert view title -->
     <string name="Import.password">이 개인 열쇠는 비밀번호로 보호됩니다.</string>
     <!-- password textfield placeholder -->
     <string name="Import.passwordPlaceholder">비밀번호</string>
     <!-- Caption for graphics -->
-    <string name="Import.rightCaption">귀하의 BRD 지갑</string>
+    <string name="Import.rightCaption">귀하의 Electra 지갑</string>
     <!-- Scan Private key button label -->
     <string name="Import.scan">개인 열쇠 스캔</string>
     <!-- Import wallet success alert title -->
@@ -295,9 +295,9 @@
     <!-- Ignore jailbreak warning button -->
     <string name="JailbreakWarnings.ignore">무시</string>
     <!-- Jailbreak warning message -->
-    <string name="JailbreakWarnings.messageWithBalance">장치 보안 취약\n모든 \'jailbreak\' 앱이 BRD의 키체인 데이터에 접속하여 귀하의 비트코인을 훔칠 수 있습니다! 이 지갑을 바로 지우시고 안전한 장치에서 복구하세요.</string>
+    <string name="JailbreakWarnings.messageWithBalance">장치 보안 취약\n모든 \'jailbreak\' 앱이 Electra의 키체인 데이터에 접속하여 귀하의 비트코인을 훔칠 수 있습니다! 이 지갑을 바로 지우시고 안전한 장치에서 복구하세요.</string>
     <!-- Jailbreak warning message -->
-    <string name="JailbreakWarnings.messageWithoutBalance">장치 보안 취약\n모든 \'jailbreak\' 앱이 BRD의 키체인 데이터에 접속하여 귀하의 비트코인을 훔칠 수 있습니다! BRD를 비-jailbroken 장치에서만 사용해 주세요.</string>
+    <string name="JailbreakWarnings.messageWithoutBalance">장치 보안 취약\n모든 \'jailbreak\' 앱이 Electra의 키체인 데이터에 접속하여 귀하의 비트코인을 훔칠 수 있습니다! Electra를 비-jailbroken 장치에서만 사용해 주세요.</string>
     <!-- Jailbreak warning title -->
     <string name="JailbreakWarnings.title">경고</string>
     <!-- Wipe wallet button -->
@@ -319,7 +319,7 @@
     <!-- Location services disabled error -->
     <string name="LocationPlugin.disabled">위치 서비스가 꺼졌습니다.</string>
     <!-- No permissions for location services -->
-    <string name="LocationPlugin.notAuthorized">BRD가 위치 서비스 접속 권한이 없습니다.</string>
+    <string name="LocationPlugin.notAuthorized">Electra가 위치 서비스 접속 권한이 없습니다.</string>
     <!-- Wallet creation date prefix -->
     <string name="ManageWallet.creationDatePrefix">귀하께서는 %1$s 에 지갑을 만들었습니다</string>
     <!-- Manage wallet description text -->
@@ -385,13 +385,13 @@
     <!-- Onboarding screen Page 1 title -->
     <string name="OnboardingPageOne.title">새로운 글로벌 월렛에 오신 것을 환영합니다!</string>
     <!-- Onboarding screen Page 3 subtitle -->
-    <string name="OnboardingPageThree.subtitle">BRD와 함께 쉽고 안전하게 투자하고 다양하게 분산시키세요.</string>
+    <string name="OnboardingPageThree.subtitle">Electra와 함께 쉽고 안전하게 투자하고 다양하게 분산시키세요.</string>
     <!-- Onboarding screen Page 3 title -->
     <string name="OnboardingPageThree.title">비트코인, 토큰, 그리고 그 외 다른 가상 화폐들을 구매하고 거래하세요.</string>
     <!-- Onboarding screen Page 2 subtitle -->
     <string name="OnboardingPageTwo.subtitle">저희는 60억 달러 넘는 가치의 자산을 안전하게 보유하고 있습니다.</string>
     <!-- Onboarding screen Page 2 title -->
-    <string name="OnboardingPageTwo.title">BRD를 신용하는 전 세계 150만 명의 사람들과 함께 하세요.</string>
+    <string name="OnboardingPageTwo.title">Electra를 신용하는 전 세계 150만 명의 사람들과 함께 하세요.</string>
     <!-- Eg. Send 1.0Eth to purchase CCC -->
     <string name="PaymentConfirmation.amountText">%2$s 구매를 위해 %1$s 전송</string>
     <!-- Payment confirmation view title -->
@@ -447,7 +447,7 @@
     <!-- Transaction rejected prompt title -->
     <string name="Prompts.RecommendRescan.title">거래 거절됨</string>
     <!-- Share data prompt body -->
-    <string name="Prompts.ShareData.body">BRD가 발전할 수 있도록 익명 데이터를 공유해주십시오</string>
+    <string name="Prompts.ShareData.body">Electra가 발전할 수 있도록 익명 데이터를 공유해주십시오</string>
     <!-- Share data prompt title -->
     <string name="Prompts.ShareData.title">익명 데이터 공유</string>
     <!-- Enable touch ID prompt body -->
@@ -583,9 +583,9 @@
     <!-- Balance: $4.00 -->
     <string name="Send.balance">잔액: %1$s</string>
     <!-- Instructions how to allow the camera access for the app -->
-    <string name="Send.cameraUnavailabeMessage.android">\"설정\" &gt; \"앱\" &gt; \"BRD\" &gt; \"허용\"에서 카메라 접속을 허용해 주세요</string>
+    <string name="Send.cameraUnavailabeMessage.android">\"설정\" &gt; \"앱\" &gt; \"Electra\" &gt; \"허용\"에서 카메라 접속을 허용해 주세요</string>
     <!-- Permission required to access camera -->
-    <string name="Send.cameraUnavailabeTitle.android">BRD의 카메라 접속이 허용되지 않았습니다</string>
+    <string name="Send.cameraUnavailabeTitle.android">Electra의 카메라 접속이 허용되지 않았습니다</string>
     <!-- Camera not allowed message -->
     <string name="Send.cameraunavailableMessage">설정에서 카메라 액세스를 허가해 주세요.</string>
     <!-- Camera not allowed alert title -->
@@ -824,7 +824,7 @@
     <string name="Transaction.sentTo">%1$s으로 전송되었습니다</string>
     <!-- eg. Starting balance: $50.00 -->
     <string name="Transaction.starting">기초 잔액: %1$s</string>
-    <!-- e.g. "[The money you paid was a] Fee for token transfer: BRD" (BRD is the token that was transfered) -->
+    <!-- e.g. "[The money you paid was a] Fee for token transfer: Electra" (Electra is the token that was transfered) -->
     <string name="Transaction.tokenTransfer">토큰 송금 수수료: %1$s</string>
     <!-- Waiting to be confirmed string -->
     <string name="Transaction.waiting">확인 대기 중. 일부 판매자는 트랜잭션을 완료하기 위해 확인을 요구합니다. 예상 소요 시간: 1~2시간.</string>
@@ -933,7 +933,7 @@
     <!-- Instruction to touch the sensor for fingerprint authentication -->
     <string name="UnlockScreen.touchIdInstructions.android">터치 센서</string>
     <!-- TouchID prompt text -->
-    <string name="UnlockScreen.touchIdPrompt">BRD의 잠금을 해제하세요.</string>
+    <string name="UnlockScreen.touchIdPrompt">Electra의 잠금을 해제하세요.</string>
     <!-- Device authentication body -->
     <string name="UnlockScreen.touchIdPrompt.android">계속하시려면 귀하의 안드로이드 장치 잠금을 해제해 주세요.</string>
     <!-- Unlock with TouchID accessibility label -->
@@ -943,7 +943,7 @@
     <!-- Update PIN caption text -->
     <string name="UpdatePin.caption">이 PIN 코드를 기억하세요. PIN 코드를 잊어버리면 자신의 비트코인을 사용할 수 없게 됩니다.</string>
     <!-- PIN creation info. -->
-    <string name="UpdatePin.createInstruction">귀하의 PIN 코드는 BRD의 잠금을 해제하고 돈을 송금하는 데 사용됩니다.</string>
+    <string name="UpdatePin.createInstruction">귀하의 PIN 코드는 Electra의 잠금을 해제하고 돈을 송금하는 데 사용됩니다.</string>
     <!-- Update PIN title -->
     <string name="UpdatePin.createTitle">PIN 설정</string>
     <!-- Update PIN title -->
@@ -977,7 +977,7 @@
     <!-- Authorize transaction with touch id message -->
     <string name="VerifyPin.touchIdMessage">이 거래 승인</string>
     <!-- 'No wallet' warning for watch app -->
-    <string name="Watch.noWalletWarning">귀하의 월렛을 설정하려면 BRD 앱을 열어 주세요.</string>
+    <string name="Watch.noWalletWarning">귀하의 월렛을 설정하려면 Electra 앱을 열어 주세요.</string>
     <!-- Dismiss button label -->
     <string name="Webview.dismiss">무시</string>
     <!-- Webview loading error message -->
@@ -985,9 +985,9 @@
     <!-- Updating webview message -->
     <string name="Webview.updating">업데이트 중...</string>
     <!-- Welcome screen text. (?) will be replaced with the help icon users should look for. -->
-    <string name="Welcome.body">Breadwallet이 이름을 BRD로 바꾸고 새롭게 단장하였으며 새로운 기능도 갖췄습니다.\n\n도움이 필요하시면 대부분 화면에서 우측 상단에 있는 (?)을(를) 클릭하십시오.</string>
+    <string name="Welcome.body">Breadwallet이 이름을 Electra로 바꾸고 새롭게 단장하였으며 새로운 기능도 갖췄습니다.\n\n도움이 필요하시면 대부분 화면에서 우측 상단에 있는 (?)을(를) 클릭하십시오.</string>
     <!-- Top title of welcome screen -->
-    <string name="Welcome.title">BRD에 환영합니다!</string>
+    <string name="Welcome.title">Electra에 환영합니다!</string>
     <!-- Wipe wallet alert message -->
     <string name="WipeWallet.alertMessage">정말 이 월렛을 삭제할까요?</string>
     <!-- Wipe wallet alert title -->
@@ -1001,7 +1001,7 @@
     <!-- Instructions for unlinking the wallet -->
     <string name="WipeWallet.startMessage">지갑의 연결을 해제하여 이 기기에서 제거하세요. 이 지갑의 연결이 해제되면, 새로운 지갑을 시작하거나 이 기기에 다른 지갑을 복구할 수 있습니다.</string>
     <!-- Start wipe wallet view warning -->
-    <string name="WipeWallet.startWarning">이장치에서 현재 BRD 지갑을 더는 이용할 수 없게 됩니다. 잔고는 남아 있게 됩니다.</string>
+    <string name="WipeWallet.startWarning">이장치에서 현재 Electra 지갑을 더는 이용할 수 없게 됩니다. 잔고는 남아 있게 됩니다.</string>
     <!-- Unlink this wallet from this device. -->
     <string name="WipeWallet.title">지갑 연결 해제</string>
     <!-- Wipe wallet button title -->
